# fuzzy-drugs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
crates/fuzzy-drugs-core/: CLAUDE.md  Cargo.toml  build.rs  uniffi.toml
crates/fuzzy-drugs-core/src/: fuzzy_drugs.udl  lib.rs
crates/fuzzy-drugs-core/src/db/: catalog.rs  drafts.rs  merkle.rs  mod.rs  patients.rs  schema.rs
crates/fuzzy-drugs-core/src/export/: billing.rs  compliance.rs  mod.rs
crates/fuzzy-drugs-core/src/merkle/: mod.rs  proof.rs  sync.rs  tree.rs
crates/fuzzy-drugs-core/src/models/: catalog.rs  encounter.rs  mod.rs  patient.rs  resolution.rs
crates/fuzzy-drugs-core/src/resolver/: disambiguator.rs  mod.rs  normalizer.rs
crates/fuzzy-drugs-core/tests/: merkle_tests.rs  resolver_golden_tests.rs
crates/fuzzy-drugs-llm/: CLAUDE.md  Cargo.toml
crates/fuzzy-drugs-llm/src/: extraction.rs  lib.rs  prompts.rs
ios/: CLAUDE.md
ios/FuzzyDrugs/: FuzzyDrugsApp.swift
ios/FuzzyDrugs/Audio/: AudioRecorder.swift  TranscriptionService.swift
ios/FuzzyDrugs/Sync/: SyncManager.swift
ios/FuzzyDrugs/Views/: CatalogSearchView.swift  ContentView.swift  EncounterDetailView.swift  RecordingView.swift  ReviewQueueView.swift  SettingsView.swift
scripts/: CLAUDE.md  build-xcframework.sh  run-tests.sh
test-data/: CLAUDE.md
test-data/golden/: resolver_cases.json
