[package]
name = "fuzzy-drugs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for veterinary drug resolution and encounter management"

[lib]
# staticlib for iOS linking, lib for Rust dependencies
# NOTE: To generate Swift bindings, temporarily add "cdylib" and build for host
crate-type = ["lib", "staticlib"]
name = "fuzzy_drugs_core"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rusqlite.workspace = true
uniffi.workspace = true
sha2.workspace = true
hex.workspace = true
strsim.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile = "3.10"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
