[package]
name = "fuzzy-drugs-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "LLM wrapper for NER extraction using llama.cpp"

[lib]
name = "fuzzy_drugs_llm"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# llama.cpp bindings - using llama-cpp-2 for Rust bindings
llama-cpp-2 = { version = "0.1", optional = true }

[features]
default = []
llm = ["llama-cpp-2"]

[dev-dependencies]
proptest.workspace = true
